CourseManagementPortalWebUI.  Add ErrorHandlerMiddleware and HttpLoggerMiddleware

--- a/CourseManagementPortalWebUI/CourseManagementPortalWebUI.csproj
+++ b/CourseManagementPortalWebUI/CourseManagementPortalWebUI.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CorrelationId" Version="3.0.1" />
+    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="2.3.2" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CourseManagementPortalCore\CourseManagementPortalCore.csproj" />
   </ItemGroup>
 
