--- a/CourseManagementPortalWebUI/CourseManagementPortalWebUI.csproj
+++ b/CourseManagementPortalWebUI/CourseManagementPortalWebUI.csproj
@@ -14,6 +14,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CourseManagementPortalCore\CourseManagementPortalCore.csproj" />
+    <ProjectReference Include="..\CourseManagementPortalDataAccess\CourseManagementPortalDataAccess.csproj" />
+    <ProjectReference Include="..\CourseManagementPortalEntities\CourseManagementPortalEntities.csproj" />
   </ItemGroup>
 
 </Project>
