Correct the naming

--- a/CourseManagementPortalWebUI/appsettings.json
+++ b/CourseManagementPortalWebUI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=localhost; Initial Catalog=CourseManagementPortal; Integrated Security=True;"
+    "Default": "Server = localhost; Port=3303; Database = CourseManagementPortal; User ID=root; Password=Umud.2003"
   }
 }
