--- a/CourseManagementPortalDataAccess/CourseManagementPortalDataAccess.csproj
+++ b/CourseManagementPortalDataAccess/CourseManagementPortalDataAccess.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\CourseManagementPortalEntities\CourseManagementPortalEntities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Factories\" />
+  </ItemGroup>
+
 </Project>
